--- a/scss/_colorFont.scss
+++ b/scss/_colorFont.scss
@@ -1,9 +1,10 @@
 //Encabezados
 $font_encabezados:'Poppins', sans-serif;
 $font_weight_encabezados:700;
-
+$font_size_encabezados:53px;   //desktop
+$font_size_encabezados_peque:25px;
 //font body
-$font_weight_pequeño:400;
+$font_weight_peque:400;
 $font_weight_medio:600;
 $font_weight_grande:700;
 
