--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,9 @@ body{
 @import "colorFont";
 @import "grid";
 @import "header";
+@import "section_one";
+@import "section_two";
+@import "section_three";
+@import "section_four";
+@import "section_five";
+@import "footer";
