--- a/css/main.css
+++ b/css/main.css
@@ -105,5 +105,126 @@ container_header_button
     padding: 8px 0px;
   }
 }
+.container_sectOne {
+  width: 100%;
+  padding: 100px 30px;
+  background: hsl(207deg, 100%, 98%);
+  text-align: center;
+}
+.container_sectOne .container_sectOne_boxTop {
+  width: 100%;
+  padding: 10px 0px;
+  background: hsl(207deg, 100%, 98%);
+}
+.container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 53px;
+  color: hsl(192deg, 100%, 9%);
+}
+.container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_parrafo {
+  margin: 20px auto;
+  width: 40%;
+  font-weight: 400;
+  color: hsl(192deg, 100%, 9%);
+}
+.container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_button {
+  margin-top: 20px;
+  width: 23%;
+  padding: 23px 0px;
+  border: none;
+  color: hsl(207deg, 100%, 98%);
+  background: hsl(322deg, 100%, 66%);
+  border-radius: 100px;
+  box-shadow: 0px 0px 2px hsl(192deg, 100%, 9%);
+  font-size: 400;
+  transition: 0.3s all;
+}
+.container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_button:hover {
+  background: hsl(321deg, 100%, 78%);
+  cursor: pointer;
+}
+.container_sectOne .container_sectOne_boxImage {
+  margin: 80px auto;
+  width: 80%;
+  height: 700px;
+  padding: 10px 0px;
+}
+.container_sectOne .container_sectOne_boxMarker {
+  width: 100%;
+  padding: 10px 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box {
+  width: auto;
+  padding: 5px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_image {
+  width: 40px;
+  height: 40px;
+}
+.container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_number {
+  font-size: 70px;
+  font-weight: 700;
+}
+.container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_text {
+  font-size: 400;
+  font-size: 18px;
+  color: hsl(192deg, 100%, 9%);
+  text-align: center;
+}
+
+@media (min-width: 320px) and (max-width: 423px) {
+  .container_sectOne {
+    padding: 100px 20px;
+  }
+  .container_sectOne .container_sectOne_boxTop {
+    width: 100%;
+    padding: 10px 0px;
+    background: hsl(207deg, 100%, 98%);
+  }
+  .container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_title {
+    font-size: 25px;
+  }
+  .container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_parrafo {
+    width: 100%;
+  }
+  .container_sectOne .container_sectOne_boxTop .container_sectOne_boxTop_button {
+    width: 80%;
+    padding: 15px 0px;
+  }
+  .container_sectOne .container_sectOne_boxImage {
+    margin: 80px auto;
+    width: 90%;
+    height: 250px;
+    padding: 10px 0px;
+  }
+  .container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box {
+    width: 200px;
+    padding: 5px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_image {
+    width: 30px;
+    height: 30px;
+  }
+  .container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_number {
+    font-size: 70px;
+    font-weight: 700;
+  }
+  .container_sectOne .container_sectOne_boxMarker .container_sectOne_boxMarker_box .container_sectOne_boxMarker_box_text {
+    color: rgb(165, 164, 164);
+    text-align: center;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
