--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,7 +10,7 @@ container_header_button
 .container_header{
     width: 100%;
     padding: 30px 30px;
-    background: $Very_Pale_Blue;
+    background: white;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
