--- a/scss/_section_one.scss
+++ b/scss/_section_one.scss
@@ -5,14 +5,12 @@
 .container_sectOne{
     width: 100%;
     padding: 100px 30px;
-    background: $Very_Pale_Blue;
     text-align: center;
-
+    background: white;
     //BOX TOP
     .container_sectOne_boxTop{
         width: 100%;
         padding: 10px 0px;
-        background: $Very_Pale_Blue;
         .container_sectOne_boxTop_title{
             font-family:$font_encabezados;
             font-weight:$font_weight_encabezados;
