--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -12,10 +12,10 @@ GRID_FOOTER*/
 .GRID_CONTAINER{
     width: 100%;
     max-width: 1440px;
-    //background: brown;
+    background: rgb(186, 226, 153);
     margin: auto;
     display: grid;
-    //grid-gap: 1em;
+    grid-gap: 1em;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: auto;
     grid-template-areas: 
