--- a/css/main.css
+++ b/css/main.css
@@ -465,11 +465,6 @@ container_header_button
     background-size: 100% 100%;
   }
 }
-/*
-container_secFive
-container_secFive_title
-container_secFive_button
-*/
 .container_secFive {
   width: 100%;
   padding: 80px 0px;
@@ -494,6 +489,35 @@ container_secFive_button
 .container_secFive .container_secFive_button:hover {
   background: hsl(321deg, 100%, 78%);
   cursor: pointer;
+}
+
+@media (min-width: 320px) and (max-width: 423px) {
+  .container_secFive {
+    width: 100%;
+    padding: 50px 0px;
+  }
+  .container_secFive .container_secFive_title {
+    text-align: center;
+    font-size: 25px;
+    background: padding-box;
+    color: hsl(192deg, 100%, 9%);
+  }
+  .container_secFive .container_secFive_button {
+    margin-top: 30px;
+    border: none;
+    background: hsl(322deg, 100%, 66%);
+    color: hsl(207deg, 100%, 98%);
+    border-radius: 50px;
+    transition: 0.3s all;
+    box-shadow: 0px 0px 5px grey;
+    width: 250px;
+    padding: 15px 0px;
+    margin-left: calc(50% - 125px);
+  }
+  .container_secFive .container_secFive_button:hover {
+    background: hsl(321deg, 100%, 78%);
+    cursor: pointer;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
