--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -12,10 +12,9 @@ GRID_FOOTER*/
 .GRID_CONTAINER{
     width: 100%;
     max-width: 1440px;
-    background: rgb(186, 226, 153);
     margin: auto;
     display: grid;
-    grid-gap: 1em;
+    //grid-gap: 1em;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: auto;
     grid-template-areas: 
@@ -28,44 +27,44 @@ GRID_FOOTER*/
         "GRID_FOOTER        GRID_FOOTER";
 
         .GRID_HEADER{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_HEADER;
         }
 
         .GRID_SECTION_ONE{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_SECTION_ONE;
         }
 
         .GRID_SECTION_TWO{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_SECTION_TWO;
         }
 
         .GRID_SECTION_THREE{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_SECTION_THREE;
         }
 
         .GRID_SECTION_FOUR{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_SECTION_FOUR;
         }
 
         .GRID_SECTION_FIVE{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_SECTION_FIVE;
         }
 
         .GRID_FOOTER{
-            padding: 10px 0px;
-            background: rgb(238, 109, 109);
+            //padding: 10px 0px;
+            //background: rgb(238, 109, 109);
             grid-area: GRID_FOOTER;
         }
         
