--- a/scss/_section_five.scss
+++ b/scss/_section_five.scss
@@ -10,6 +10,8 @@
     .container_secFive_title{
         text-align: center;
         font-size: $font_size_encabezados_peque;
+        animation-duration: 0.5s;
+        animation-delay: 0.5s;
     }
 
     .container_secFive_button{
@@ -23,6 +25,8 @@
         margin-left:calc(50% - 175px);
         transition: 0.3s all;
         box-shadow: 0px 0px 5px grey;
+        animation-duration: 0.5s;
+        animation-delay: 0.8s;
     }
     .container_secFive_button:hover{
         background: $Light_Pink;
